--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "start": "node app",
         "build": "node build",
-        "test": "echo \"Error: no test specified\" && exit 1"
+		"test": "mocha --exit"
     },
     "author": {
         "name": "Aldair Beltran",
