--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,8 +48,9 @@
 		"block-scoped-var": 2,
 		"complexity": 0,
 		"consistent-return": 0,
-	//	"curly-return": [2, "multi-line-except-return", "consistent"],
+		"curly": ["error", "multi-line", "consistent"],
 		"default-case": 0,
+		"default-case-last": 0,
 		"dot-location": [2, "property"],
 		"dot-notation": 0,
 		"eqeqeq": 2,
@@ -93,7 +94,7 @@
 		"no-void": 0,
 		"no-warning-comments": 0,
 		"no-with": 2,
-//		"radix": [2, "always"],
+		"radix": ["error", "as-needed"],
 		"vars-on-top": 0,
 		"wrap-iife": [2, "inside"],
 		"yoda": 0,
@@ -143,7 +144,7 @@
 		"no-new-object": 2,
 		"no-spaced-func": 2,
 		"no-ternary": 0,
-	//	"no-trailing-spaces": 2, <-- No se que es
+//		"no-trailing-spaces": ["error", {"ignoreComments": false}],
 		"no-underscore-dangle": 0,
 		"no-unneeded-ternary": 2,
 		"no-var": 2,
@@ -166,12 +167,10 @@
 		"space-unary-ops": [2, {"words": true, "nonwords": false}],
 		"spaced-comment": 0,
 		"wrap-regex": 0,
-
 		"no-class-assign": 2,
 		"no-const-assign": 2,
 		"no-dupe-class-members": 2,
 		"no-this-before-super": 2
-//		"validate-conditionals": 2
 	},
 	"overrides": [
 		{
