--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "devDependencies": {
         "mocha": "^7.1.1",
+        "husky": "^4.2.3",
         "eslint": "^7.1.0"
     },
     "url": "https://github.com/villager/Edna-Moda",
