:100: more eslint :balloon:

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -71,7 +71,7 @@
 		"no-lone-blocks": 0,
 		"no-loop-func": 0,
 		"no-magic-numbers": 0,
-		"no-multi-spaces": 0,
+		"no-multi-spaces": 2,
 		"no-multi-str": 2,
 		"no-native-reassign": 2,
 		"no-new-func": 2,
@@ -137,14 +137,14 @@
 		"no-continue": 0,
 		"no-inline-comments": 0,
 		"no-lonely-if": 0,
-	//	"no-mixed-spaces-and-tabs": [2, "smart-tabs"],
+		"no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
 		"no-multiple-empty-lines": [2, {"max": 2, "maxEOF": 1}],
 		"no-negated-condition": 0,
 		"no-nested-ternary": 0,
 		"no-new-object": 2,
 		"no-spaced-func": 2,
 		"no-ternary": 0,
-//		"no-trailing-spaces": ["error", {"ignoreComments": false}],
+		"no-trailing-spaces": ["error", {"ignoreComments": false}],
 		"no-underscore-dangle": 0,
 		"no-unneeded-ternary": 2,
 		"no-var": 2,
