--- a/package.json
+++ b/package.json
@@ -14,6 +14,15 @@
             "pre-push": "npm run lint"
         }
     },
+    "mocha": {
+        "diff": true,
+        "extension": [
+            "js"
+        ],
+        "reporter": "spec",
+        "slow": 75,
+        "timeout": 2000
+    },
     "author": {
         "name": "Aldair Beltran",
         "email": "aldairbeltran3@hotmail.com",
@@ -21,13 +30,13 @@
     },
     "dependencies": {
         "discord.js": "^12.2.0",
-        "node-static": "^0.7.11",
         "ps-data": "git://github.com/spaceshowdown/ps-data.git",
         "request": "^2.88.2",
         "sockjs-client": "^1.1.4"
     },
     "optionalDependencies": {
-        "githubhook": "^1.9.3"
+        "githubhook": "^1.9.3",
+        "node-static": "^0.7.11"
     },
     "devDependencies": {
         "mocha": "^7.1.1",
