--- a/build
+++ b/build
@@ -3,35 +3,35 @@
 try {
 	RegExp("\\p{Emoji}", "u");
 } catch (e) {
-	console.log("We require Node.js version 10 or later; you're using " + process.version);
+	console.log(`We require Node.js version 10 or later; you"re using ${process.version}`);
 	process.exit(1);
 }
 
-var child_process = require('child_process');
-var fs = require('fs');
-var path = require('path');
+var child_process = require("child_process");
+var fs = require("fs");
+var path = require("path");
 
 function shell(cmd) {
-	child_process.execSync(cmd, {stdio: 'inherit', cwd: __dirname});
+	child_process.execSync(cmd, {stdio: "inherit", cwd: __dirname});
 }
 
 try {
-	require.resolve('sockjs-client');
+	require.resolve("sockjs-client");
 } catch (e) {
-	console.log('Installing dependencies...');
-	shell('npm install --production');
+	console.log("Installing dependencies...");
+	shell("npm install --production");
 }
 
 // Make sure config.js exists. If not, copy it over synchronously from
-// config-example.js, since it's needed before we can start the bot
+// config-example.js, since it"s needed before we can start the bot
 try {
-	require.resolve('./config/config.js');
+	require.resolve("./config/config.js");
 } catch (err) {
-	if (err.code !== 'MODULE_NOT_FOUND') throw err; // should never happen
+	if (err.code !== "MODULE_NOT_FOUND") throw err; // should never happen
 
-	console.log('config.js does not exist. Creating one with default settings...');
+	console.log("config.js does not exist. Creating one with default settings...");
 	fs.writeFileSync(
-		path.resolve(__dirname, 'config/config.js'),
-		fs.readFileSync(path.resolve(__dirname, 'config/config-example.js'))
+		path.resolve(__dirname, "config/config.js"),
+		fs.readFileSync(path.resolve(__dirname, "config/config-example.js"))
 	);
 }
