--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,14 @@
 		"es6": true,
 		"node": true
 	},
-	"plugins": ["prettier"],
+	"ignorePatterns": [
+		"logs/",
+		"node_modules/",
+		".*-dist/",
+		"./servers/global-declarations.d.ts",
+		"*.ts"
+	],
+	"plugins": ["prettier", "import"],
 	"extends": ["prettier"],
 	"globals": {
         "Config": false, "Monitor": false, "Plugins": false,
@@ -202,6 +209,115 @@
 				"jest": true
 			},
 			"files": ["*.js"]
+		},
+		{
+			"env": {
+				"es6": true			  
+			},
+			"files": ["./lib/*.ts", "./servers/**/*.ts" ],
+			"parser": "@typescript-eslint/parser",
+			"parserOptions": {
+			  "ecmaVersion": 9,
+			  "sourceType": "module",
+			  "tsconfigRootDir": ".",
+			  "project": ["./tsconfig.json"]
+			},
+			"plugins": [
+				"import"
+			  ],
+			"extends": [
+			  "plugin:@typescript-eslint/recommended"
+			],
+			"rules": {
+				// TODO revisit
+				"prefer-object-spread": "off",
+				"@typescript-eslint/explicit-function-return-type": "off",
+				"@typescript-eslint/member-ordering": "off",
+				// "@typescript-eslint/no-extraneous-class": "error",
+				// "@typescript-eslint/no-type-alias": "error",
+				"@typescript-eslint/no-parameter-properties": "off",
+		
+				// test only (should never be committed, but useful when testing)
+				"no-unused-vars": "off",
+				"@typescript-eslint/no-unused-vars": ["warn", {"args": "none"}],
+				"max-len": ["warn", {
+				  "code": 120, "tabWidth": 0,
+				  // see bottom of file for source
+				  "ignorePattern": "^\\s*(?:\\/\\/ \\s*)?(?:(?:export )?(?:let |const )?[a-zA-Z0-9_$.]+(?: \\+?=>? )|[a-zA-Z0-9$]+: \\[?|(?:return |throw )?(?:new )?(?:[a-zA-Z0-9$.]+\\()?)?(?:Chat\\.html|\\$\\()?['\"`/]"
+				}],
+		
+				// PS code (code specific to PS)
+				"@typescript-eslint/no-namespace": "off",
+				"@typescript-eslint/unbound-method": "off", // used for sim event handlers, command handlers, etc
+				"new-parens": "off", // used for the `new class {...}` pattern
+				"no-prototype-builtins": "off",
+				"no-shadow": "error",
+		
+				// typescript-eslint defaults too strict
+				"@typescript-eslint/ban-ts-ignore": "off",
+				"@typescript-eslint/no-empty-function": "off",
+				"@typescript-eslint/no-explicit-any": "off",
+				"@typescript-eslint/no-non-null-assertion": "off",
+				"@typescript-eslint/no-use-before-define": "off",
+		
+				// probably bugs
+				"@typescript-eslint/ban-types": "error",
+				"@typescript-eslint/no-dupe-class-members": "error",
+				"@typescript-eslint/no-empty-interface": "error",
+				"@typescript-eslint/no-extra-non-null-assertion": "error",
+				"@typescript-eslint/no-misused-new": "error",
+				"@typescript-eslint/no-non-null-asserted-optional-chain": "error",
+				"import/no-extraneous-dependencies": "error",
+				"no-dupe-class-members": "off",
+				"no-unused-expressions": "off", // ternary is used to convert callbacks to Promises
+				"@typescript-eslint/no-unused-expressions": ["error", {"allowTernary": true}], // ternary is used to convert callbacks to Promises
+		
+				// naming style
+				"@typescript-eslint/camelcase": "off",
+				"@typescrit-eslint/explicit-module-boundary": "off",
+				// syntax style (local syntactical, usually autofixable formatting decisions)
+				"@typescript-eslint/adjacent-overload-signatures": "error",
+				"@typescript-eslint/array-type": "error",
+				"@typescript-eslint/consistent-type-assertions": ["error", {"assertionStyle": "as"}],
+				"@typescript-eslint/consistent-type-definitions": ["error", "interface"],
+				"@typescript-eslint/explicit-member-accessibility": ["error", {"accessibility": "no-public"}],
+				"@typescript-eslint/member-delimiter-style": ["error", {"overrides": {"typeLiteral": {
+				  "multiline": {"delimiter": "comma", "requireLast": true},
+				  "singleline": {"delimiter": "comma", "requireLast": false}
+				}}}],
+				"@typescript-eslint/no-this-alias": "error",
+				"@typescript-eslint/no-var-requires": "error",
+				"@typescript-eslint/prefer-as-const": "error",
+				"@typescript-eslint/prefer-for-of": "error",
+				"@typescript-eslint/prefer-function-type": "error",
+				"@typescript-eslint/prefer-includes": "error",
+				"@typescript-eslint/prefer-namespace-keyword": "error",
+				"@typescript-eslint/prefer-optional-chain": "error",
+				"@typescript-eslint/triple-slash-reference": "error",
+				"@typescript-eslint/unified-signatures": "error",
+				"prettier/prettier": [
+					"error",
+					{
+					  "semi": true,
+					  "singleQuote": true,
+					  "useTabs": true,
+					  "trailingComma": "all",
+					  "printWidth": 120,
+					  "proseWrap": "always",
+					  "arrowParens": "avoid",
+					  "endOfLine": "auto",
+					  "bracketSpacing": false
+					}
+				],	
+				// syntax style, overriding base
+				"quotes": "off",
+				"@typescript-eslint/quotes": "off",
+				"semi": "off",
+				"@typescript-eslint/semi": ["error", "always"],
+		
+				// whitespace
+				"@typescript-eslint/type-annotation-spacing": "error"
+			}
 		}
 	]
 }
