--- a/build
+++ b/build
@@ -14,6 +14,9 @@ var path = require("path");
 function shell(cmd) {
 	child_process.execSync(cmd, {stdio: "inherit", cwd: __dirname});
 }
+function sucrase(src, out, opts) {
+	shell(`npx sucrase ${opts || ''} -q ${src} -d ${out} --transforms typescript,imports --enable-legacy-typescript-module-interop`);
+}
 
 try {
 	require.resolve("sockjs-client");
@@ -21,6 +24,55 @@ try {
 	console.log("Installing dependencies...");
 	shell("npm install --production");
 }
+
+function replace(file, replacements) {
+	fs.lstat(file, function (err, stats) {
+		if (err) throw err;
+		if (stats.isSymbolicLink()) return;
+		if (stats.isFile()) {
+			if (!file.endsWith('.js')) return;
+			fs.readFile(file, "utf-8", function (err, text) {
+					if (err) throw err;
+					var anyMatch = false;
+					for (var i = 0; i < replacements.length; i++) {
+						anyMatch = anyMatch || text.match(replacements[i].regex);
+						if (anyMatch) text = text.replace(replacements[i].regex, replacements[i].replace);
+					}
+					if (!anyMatch) return;
+					fs.writeFile(file, text, function (err) {
+						if (err) throw err;
+					});
+				});
+		} else if (stats.isDirectory()) {
+			fs.readdir(file, function (err, files) {
+				if (err) throw err;
+				for (var i = 0; i < files.length; i++) {
+					replace(path.join(file, files[i]), replacements);
+				}
+			});
+		}
+	});
+}
+
+try {
+	var sucraseVersion = require('sucrase').getVersion().split('.');
+	if (
+		parseInt(sucraseVersion[0]) < 3 ||
+		(parseInt(sucraseVersion[0]) === 3 && parseInt(sucraseVersion[1]) < 12)
+	) {
+		throw new Error("Sucrase version too old");
+	}
+} catch (e) {
+	console.log('Installing dependencies...');
+	shell('npm install --production');
+}
+
+sucrase('./lib', './.lib-dist');
+sucrase('./servers', './.servers-dist');
+
+replace('.servers-dist', [
+	{regex: /(require\(.*?)(lib)/g, replace: `$1.$2-dist`},
+]);
 
 // Make sure config.js exists. If not, copy it over synchronously from
 // config-example.js, since it"s needed before we can start the bot
