:arrows_counterclockwise: Typescript 3 :balloon:

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     },
     "types": ["node"],
     "exclude": [
-        "./.*-dist/**/*"
+        "./.*-dist/**/*",
+        "*.spec.ts"
     ],
     "include": [
         "./lib/*",
