--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "node-static": "^0.7.11"
     },
     "devDependencies": {
+        "@types/jest": "^25.2.3",
         "@types/prettier": "^2.0.1",
         "@types/request": "^2.48.5",
         "@types/sockjs-client": "^1.1.1",
@@ -65,8 +66,8 @@
         "eslint-plugin-prettier": "^3.1.3",
         "husky": "^4.2.3",
         "jest": "^26.0.1",
-        "mocha": "^7.1.1",
-        "prettier": "2.0.5"
+        "prettier": "2.0.5",
+        "ts-jest": "^26.1.0"
     },
     "url": "https://github.com/villager/Edna-Moda",
     "bugs": {
