--- a/plugins/plugins/games/package.json
+++ b/plugins/plugins/games/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "bins",
-    "version": "1.0.2",
-    "main": "index.js",
+    "name": "mix-of-games",
+    "version": "1.0.0",
+    "main": "games.js",
     "author": {
         "name": "Aldair Beltran",
-        "email": "aldairbeltran3@hotmail.com",
+        "email": "aldairbeltran23@hotmail.com",
         "url": "https://github.com/villager"
     },
     "private": true
